# anagram-gen

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile.toml  README.md  build.rs
assets/: words.txt
src/: lib.rs  main.rs
