[package]
name = "anagram_gen"
version = "0.1.0"
edition = "2024"
default-run = "anagram_gen"

[dependencies]
rand = "0.8"
clap = { version = "4", features = ["derive"] }
once_cell = "1.21"
ureq = "2.6"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }

[build-dependencies]
bincode = { version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
